# data-structures-battery

./: CMakeLists.txt  ClangOverrides.txt  README.org
algorithms/: BasketQueue.cpp  BasketQueue.hpp  CMakeLists.txt  KBasket.cpp  KBasket.hpp  LLIC.cpp  LLIC.hpp  Queue.cpp  utils.hpp
analysis/: clojure_analysis.ipynb  reqs.txt
analysis/data/LLIC/counts/64/: 2024-04-02-13:47:17__FAI_LLIC_experiments.json  2024-04-02-13:59:19__LLICCAS_LLIC_experiments.json  2024-04-02-14:12:37__LLICRW_LLIC_experiments.json  2024-04-02-14:25:12__LLICRW16_LLIC_experiments.json  2024-04-02-14:45:16__LLICRW32_LLIC_experiments.json  2024-04-02-14:58:31__LLICRW128_LLIC_experiments.json  2024-04-02-15:12:21__LLICRWWC_LLIC_experiments.json  2024-04-02-15:25:09__LLICRWNP_LLIC_experiments.json  2024-04-02-15:38:17__LLICRWWCNP_LLIC_experiments.json  2024-04-02-15:52:19__LLICRWSQRT_LLIC_experiments.json  2024-04-02-16:06:49__LLICRWSQRTFS_LLIC_experiments.json  2024-04-02-16:20:07__LLICRWSQRTG_LLIC_experiments.json  2024-04-02-16:33:40__LLICRWSQRTG16_LLIC_experiments.json  2024-04-02-16:48:01__LLICRWSQRTG16_LLIC_experiments.json  analysis.json
analysis/data/LLIC/insert_extract/64/: analysis-best.json  analysis-rw.json  analysis-sqrt.json  analysis.json
analysis/data/queue/enq_deq/32/: 2024-03-30-19:32:04__FAAQUEUE_test_enq_deq_time.json  2024-03-30-20:26:06__MSQUEUE_test_enq_deq_time.json  2024-03-30-20:35:48__LCRQQUEUE_test_enq_deq_time.json  2024-03-30-20:43:57__YMCQUEUE_test_enq_deq_time.json  2024-03-30-23:20:11__SBQQUEUE_test_enq_deq_time.json  2024-03-30-23:51:48__LLICQUEUE_test_enq_deq_time.json  2024-03-31-00:15:03__LLICQUEUE_SEGMENT_test_enq_deq_time.json  2024-03-31-06:06:30__LLICQUEUE_ARRAY_test_enq_deq_time.json  analysis.json  enq-deq.tex
analysis/data/queue/enq_deq/64/: analysis.json  enq-deq.tex
analysis/data/queue/inner/32/: analysis.json
analysis/data/queue/inner/64/: 2024-03-20-20:08:15__RW_CAS_QUEUE_inner_queue_experiments.json  2024-03-21-05:18:55__RW16_CAS_QUEUE_inner_queue_experiments.json  2024-03-21-08:46:03__RW_FAI_QUEUE_inner_queue_experiments.json  2024-03-21-11:36:26__RW16_FAI_QUEUE_inner_queue_experiments.json  2024-03-21-15:25:45__RWSQRT16_FAI_QUEUE_inner_queue_experiments.json  2024-03-22-19:03:00__RWSQRT32_FAI_QUEUE_inner_queue_experiments.json  2024-03-23-06:55:07__RWSQRT16_CAS_QUEUE_inner_queue_experiments.json  2024-03-23-17:22:14__RWSQRT32_CAS_QUEUE_inner_queue_experiments.json  analysis-all.json  analysis.json  enq-deq.tex
analysis/data/queue/only_deq/32/: 2024-03-31-17:56:19__LLICQUEUE_SEGMENT_test_only_deq_time.json  2024-03-31-22:02:33__LLICQUEUE_ARRAY_test_only_deq_time.json  analysis.json  only_deq.tex
analysis/data/queue/only_deq/64/: 2024-02-09-05:52:53__MSQUEUE_test_only_deq_time.json  2024-02-09-06:26:40__LCRQQUEUE_test_only_deq_time.json  2024-02-09-06:50:59__YMCQUEUE_test_only_deq_time.json  2024-02-09-15:49:25__SBQQUEUE_test_only_deq_time.json  2024-02-26-21:20:02__LLICQUEUE_test_only_deq_time.json  2024-03-04-03:03:11__LLICQUEUE_SEGMENT_test_only_deq_time.json  2024-03-04-08:02:56__LLICQUEUE_ARRAY_test_only_deq_time.json  analysis.json  only_deq.tex
analysis/data/queue/only_enq/32/: 2024-03-31-11:25:10__FAAQUEUE_test_only_enq_time.json  2024-03-31-12:08:24__MSQUEUE_test_only_enq_time.json  2024-03-31-12:43:18__LLICQUEUE_SEGMENT_test_only_enq_time.json  2024-03-31-16:55:56__LLICQUEUE_ARRAY_test_only_enq_time.json  analysis.json  only_enq.tex
analysis/data/queue/only_enq/64/: 2024-02-06-17:10:48__FAAQUEUE_test_only_enq_time.json  2024-02-06-20:15:17__MSQUEUE_test_only_enq_time.json  2024-02-06-20:53:40__LCRQQUEUE_test_only_enq_time.json  2024-02-06-21:05:42__YMCQUEUE_test_only_enq_time.json  2024-02-11-19:20:59__SBQQUEUE_test_only_enq_time.json  2024-02-11-20:55:34__LLICQUEUE_test_only_enq_time.json  2024-03-04-12:46:43__LLICQUEUE_SEGMENT_test_only_enq_time.json  2024-03-04-17:30:28__LLICQUEUE_ARRAY_test_only_enq_time.json  2024-03-07-15:48:44__LLICQUEUE_ARRAY_2_test_only_enq_time.json  analysis.json  only_enq.tex
basket/: CMakeLists.txt
basket/include/: basket_queue.hpp  kbasket.hpp  llic.hpp  queue.hpp  utils.hpp
basket/src/: basket_queue.cpp  kbasket.cpp  llic.cpp  queue.cpp  utils.cpp
docs/: design.org
main/: CMakeLists.txt  LLICTest.cpp  LLICTest.hpp  Latency.cpp  Latency.hpp  main.cpp  utils.cpp  utils.hpp
queue/: CMakeLists.txt
queue/include/: Experiments.hpp  ExperimentsQueue.hpp  basket_queue.hpp  basket_queue_test.hpp  kbasket.hpp  llic.hpp  llictest.hpp
queue/src/: basket_queue.cpp  basket_queue_test.cpp  c_queue.cpp  kbasket.cpp  latency.cpp  llic.cpp  llictest.cpp  main.cpp
queueTest/: CMakeLists.txt
queueTest/include/: Experiments.hpp  FAAArrayQueue.hpp  HPQueue.hpp  HazardPointers.hpp  LCRQ.hpp  LLICQueue.hpp  MemoryManagementPool.hpp  MichaelScottQueue.hpp  SBQQueue.hpp  ThreadingQueue.hpp  YMCQueue.hpp
queueTest/src/: main.cpp
tests/: CMakeLists.txt
tests/testqueue/: CMakeLists.txt  testbasket.cpp  testbasket.hpp  testqueue.cpp  testqueue.h
work-stealing/: CMakeLists.txt
work-stealing/src/: main.cpp
